--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <main>
+    <div class="Mensajito">Una pequeña cartita para una gran persoita💌💝🥰</div>
     <div class="container-letter">
       <div class="cover"></div>
       <span class="heart">♥</span>
